feat: copy to json

--- a/Ctcu Extension/Info.plist
+++ b/Ctcu Extension/Info.plist
@@ -33,7 +33,7 @@
 				<string>example.com</string>
 			</array>
 			<key>Level</key>
-			<string>Some</string>
+			<string>All</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableDescription</key>
