--- a/Ctcu Extension/Info.plist
+++ b/Ctcu Extension/Info.plist
@@ -24,7 +24,7 @@
 			<key>Image</key>
 			<string>ToolbarItemIcon.pdf</string>
 			<key>Label</key>
-			<string>Your Button</string>
+			<string>Ctcu</string>
 		</dict>
 		<key>SFSafariWebsiteAccess</key>
 		<dict>
